--- a/frontend/src/components/forms/DropdownWhite.module.scss
+++ b/frontend/src/components/forms/DropdownWhite.module.scss
@@ -6,7 +6,8 @@
 
   .dropButton {
     width: 100%;
-    height: 54px;
+    min-height: 54px;
+    height: fit-content;
     padding: 13px 20px 13px 20px;
     border: none;
     border-radius: 10px;
